# Peroxide_Gallery

./: .gitignore  README.md
IO/dataframe/: Cargo.toml  README.md  nc_plot.py
IO/save_matrix/: Cargo.toml  README.md
IO/with_polars/: Cargo.toml  README.md  test.py
Linear_Algebra/mul/: Cargo.toml
Linear_Algebra/solve/: Cargo.toml  README.md
Linear_Algebra/svd/: Cargo.toml
Linear_Algebra/triangular/: Cargo.toml  README.md
Linear_Algebra/waz/: Cargo.toml  README.md
Machine_Learning/lda/: Cargo.toml  nc_plot.py
Machine_Learning/linear_reg/: Cargo.toml  README.md  nc_plot.py
Machine_Learning/linear_reg_ridge/: Cargo.toml  README.md  nc_plot.py  par_nc_plot.py  run.sh
Machine_Learning/mlp/: Cargo.toml  README.md
Machine_Learning/non_linear_reg/: Cargo.toml  README.md
Machine_Learning/svm/: .gitignore  Cargo.toml  README.md  svm_plot.py
Numeric/adaptive/: Cargo.toml
Numeric/cubic_b_spline/: Cargo.toml  README.md
Numeric/cubic_hermite/: Cargo.toml  README.md  nc_plot.py
Numeric/dct/: Cargo.toml  README.md  pq_plot.py
Numeric/fem_interp/: Cargo.toml  hw_tg_kim.md  nc_plot.py
Numeric/importance_sampling/: Cargo.toml  README.md
Numeric/lm/: Cargo.toml  README.md  pq_plot.py
Numeric/lm_with_weight/: Cargo.toml  README.md
Numeric/lorenz/: Cargo.toml  README.md  nc_plot.py
Numeric/newmark_beta/: Cargo.toml  README.md  nc_plot.py  pq_plot.py
Physics/yukawa_ground_state/: Cargo.toml  README.md  nc_plot.py
Physics/yukawa_ground_state/src/: main.rs
Plot/plot_feature_2/: Cargo.toml  README.md
Plot/plot_feature_2/src/: main.rs
(+107 files in other folders)
